--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -9,7 +9,7 @@
     width: 200px;
     padding-left: 4px;
     flex-grow: 0;
-    background-color: #555;
+    background-color: #eaeaea;
     overflow: auto;
 }
 ul {
